# Basic_Rollup

./: LICENSE
rollup_client/: Cargo.toml
rollup_client/src/: main.rs
rollup_core/: Cargo.toml
rollup_core/src/: frontend.rs  main.rs  rollupdb.rs  sequencer.rs  settle.rs
