[package]
name = "rollup_client"
version = "0.1.0"
edition = "2021"
authors = [ "bergabman bergabman1@gmail.com" ]

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
solana-sdk = "2.0.7"
solana-client = "2.0.7"
solana-transaction-status = "2.0.8"
anyhow = "1.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
bincode = "1.3.3"